<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView_topBun"
        android:layout_width="fill_parent"
        android:layout_height="103dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/dadsBurger"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.059"
        app:srcCompat="@drawable/topbun" />

    <RadioGroup
        android:id="@+id/radiogroup_patty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <RadioButton
            android:id="@+id/radioButton_Beef"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/beefLabel"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButton_Turkey"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:text="@string/turkeyLabel"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButton_Veggie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/veggieLabel"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textStyle="bold" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/checkBox_bacon"
        android:layout_width="95dp"
        android:layout_height="43dp"
        android:layout_gravity="center"
        android:onClick="onClick"
        android:text="@string/baconLabel"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup_cheese"
        android:layout_width="392dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButton_noCheese"
            android:layout_width="8dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/noCheeseLabel"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButton_cheddar"
            android:layout_width="4dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cheddarLabel"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButton_mozz"
            android:layout_width="11dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mozzLabel"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textStyle="bold" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView_splSauce"
        android:layout_width="237dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sauceLabel"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textStyle="normal|bold" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:max="100"
        android:progress="0" />

    <ImageView
        android:id="@+id/imageView_bBun"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:contentDescription="@string/bottombun"
        app:srcCompat="@drawable/bottombun" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="63dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_calorie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/calorieLabel"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#595555"
            android:textStyle="bold|italic" />


        <TextView
            android:id="@+id/textView_calCount"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#595555"
            android:textStyle="bold|italic" />

    </LinearLayout>


</LinearLayout>